welcome.lessons.welcome.variables.Variables.scala.error
Variables:10: error: not found: value While
While (nbPas != 0) {
^